--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=" Portifólio-Marina" content=" Projeto de portifólio pessoal, envolvendo HTML| CSS | JavaScript">
     <title>MarinaSantos-Portifólio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!--MY PERSONAL FAVION ICON-->
     <link rel="shortcut icon" href="./assets/favicon_io/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/styles/reset.css">
@@ -12,17 +16,30 @@
 </head>
 <body>
     <header>
-        <section>
+        <section class="top">
+            <div class="menu-top">
+                <ul class="ul-top">
+                    <li id="Home"     href="#Home">Home</li>
+                    <li id="Projects" href="#Projects">Projects</li>
+                    <li id="About"    href="#About">About</li>
+                    <li id="Contact"  href="#Contact">Contact</li>
+                </ul>
+            </div>
+            <div class="logoSite">
+                <img src="./assets/favicon_io/favicon-32x32.png">
+            </div>
+            <div class="icon-ms-top">
+         <i class="bi bi-bluesky"></i>
+            </div>
         </section>
-
     </header>
         <main>
 
 
         </main>
             <footer>
-
-
+                <p>@2025 Made by Developer Marina Santos</p>
             </footer>
+            <script defer src="./assets/scripts/script.js"></script>
 </body>
 </html>
