--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>MarinaSantos-Portifólio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Roboto:ital,wght@0,100..900;1,100..900&family=Stack+Sans+Headline:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <!--MY PERSONAL FAVION ICON-->
@@ -19,11 +22,14 @@
         <section class="top">
             <div class="menu-top">
                 <ul class="ul-top">
-                    <li id="Home"     href="#Home">Home</li>
+                    <li id="Home" href="#Home">Home</li>
                     <li id="Projects" href="#Projects">Projects</li>
-                    <li id="About"    href="#About">About</li>
-                    <li id="Contact"  href="#Contact">Contact</li>
+                    <li id="About" href="#About">About</li>
+                    <li id="Contact" href="#Contact">Contact</li>
                 </ul>
+            </div>
+            <div class="header-image">
+                <img src="">
             </div>
             <div class="logoSite">
                 <img src="./assets/favicon_io/favicon-32x32.png">
@@ -34,8 +40,19 @@
         </section>
     </header>
         <main>
-
-
+            <div class="inital-phase">
+                <p id="part-one">Soluções Criativas &</p>
+                <p id="part-two">Desenvolvimento Front-end</p>
+            </div>
+            <div class="descrition-about-me">
+                <p>( Marina Santos - São Paulo, desenvolvedora full-stack e Estudante de ADS )</p>
+            </div>
+            <div class="descrition-about-me-connect">
+                <a href="https://github.com/Marina0327" target="_blank"><i id="gitHub-top-description" class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"><i id="linkedin-top-description" class="bi bi-linkedin"></i></a>
+                <!--see that after-->
+                <a href="mailto:marinasmorais07@gmail.com" target="_blank"><i id="email-top-description" class="bi bi-envelope-at-fill"></i></a>
+            </div>
         </main>
             <footer>
                 <p>@2025 Made by Developer Marina Santos</p>
