--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>MarinaSantos-Portifólio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BBH+Sans+Hegarty&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Elms+Sans:ital,wght@0,100..900;1,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Roboto:ital,wght@0,100..900;1,100..900&family=Stack+Sans+Headline:wght@200..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,35 +31,43 @@
                     <li id="Contact" href="#Contact">Contact</li>
                 </ul>
             </div>
-            <div class="header-image">
-                <img src="">
-            </div>
             <div class="logoSite">
                 <img src="./assets/favicon_io/favicon-32x32.png">
             </div>
             <div class="icon-ms-top">
-         <i class="bi bi-bluesky"></i>
+                <i class="bi bi-bluesky"></i>
             </div>
         </section>
     </header>
         <main>
             <div class="inital-phase">
+                 <i id="icon-main" class="bi bi-bluesky" onclick="butterflyClick()"></i>
                 <p id="part-one">Soluções Criativas &</p>
                 <p id="part-two">Desenvolvimento Front-end</p>
+                <button>
+                    ver projetos
+                    <i class="bi bi-arrow-down-right"></i>
+                </button>
             </div>
             <div class="descrition-about-me">
                 <p>( Marina Santos - São Paulo, desenvolvedora full-stack e Estudante de ADS )</p>
             </div>
-            <div class="descrition-about-me-connect">
+             <div class="descrition-about-me-connect">
                 <a href="https://github.com/Marina0327" target="_blank"><i id="gitHub-top-description" class="bi bi-github"></i></a>
                 <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"><i id="linkedin-top-description" class="bi bi-linkedin"></i></a>
                 <!--see that after-->
                 <a href="mailto:marinasmorais07@gmail.com" target="_blank"><i id="email-top-description" class="bi bi-envelope-at-fill"></i></a>
             </div>
+            <div class="video-content">
+                <iframe width="760" height="470" src="https://www.youtube.com/embed/_K-tFITkPJ4?si=i3C1MMK1Kyd1wF_t"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+                encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen></iframe>
+            </div>
         </main>
             <footer>
                 <p>@2025 Made by Developer Marina Santos</p>
             </footer>
-            <script defer src="./assets/scripts/script.js"></script>
+        <script defer src="./assets/scripts/script.js"></script>
 </body>
 </html>
