updates in header and main

--- a/index.html
+++ b/index.html
@@ -34,36 +34,48 @@
             <div class="logoSite">
                 <img src="./assets/favicon_io/favicon-32x32.png">
             </div>
-            <div class="icon-ms-top">
+            <div class="icon-top">
                 <i class="bi bi-bluesky"></i>
             </div>
         </section>
     </header>
         <main>
             <div class="inital-phase">
-                 <i id="icon-main" class="bi bi-bluesky" onclick="butterflyClick()"></i>
+                 <i id="icon-main" class="bi bi-bluesky"></i>
                 <p id="part-one">Soluções Criativas &</p>
                 <p id="part-two">Desenvolvimento Front-end</p>
                 <button>
-                    ver projetos
-                    <i class="bi bi-arrow-down-right"></i>
+                    <p>ver projetos</p>
+                    <i id="icon-arrow" class="bi bi-arrow-down-right"></i>
                 </button>
             </div>
-            <div class="descrition-about-me">
-                <p>( Marina Santos - São Paulo, desenvolvedora full-stack e Estudante de ADS )</p>
-            </div>
-             <div class="descrition-about-me-connect">
-                <a href="https://github.com/Marina0327" target="_blank"><i id="gitHub-top-description" class="bi bi-github"></i></a>
-                <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"><i id="linkedin-top-description" class="bi bi-linkedin"></i></a>
-                <!--see that after-->
-                <a href="mailto:marinasmorais07@gmail.com" target="_blank"><i id="email-top-description" class="bi bi-envelope-at-fill"></i></a>
-            </div>
+            <section class="details-about-me">
+                <div class="descrition-about-me">
+                    <p>( Marina Santos - São Paulo, desenvolvedora full-stack e Estudante de ADS )</p>
+                </div>
+                <div class="descrition-about-me-connect">
+                     <a href="https://github.com/Marina0327" target="_blank"><i id="gitHub-top-description" class="bi bi-github"></i></a>
+                     <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"><i id="linkedin-top-description" class="bi bi-linkedin"></i></a>
+                     <!--see that after-->
+                     <a href="mailto:marinasmorais07@gmail.com" target="_blank"><i id="email-top-description" class="bi bi-envelope-at-fill"></i></a>
+                </div>
+            </section>
+            <!-- section my things-->
             <div class="video-content">
                 <iframe width="760" height="470" src="https://www.youtube.com/embed/_K-tFITkPJ4?si=i3C1MMK1Kyd1wF_t"
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
                 encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe>
             </div>
+            <section class="main-knowledge">
+                <div class="contet-knoledge">
+                    <p>Conhecimento em Tecnologias : </p>
+                    <i class="bi bi-filetype-html"></i>
+                    <i class="bi bi-filetype-css"></i>
+                    <i class="bi bi-filetype-js"></i>
+                </div>
+            
+            </section>
         </main>
             <footer>
                 <p>@2025 Made by Developer Marina Santos</p>
