main css updates

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div class="logoSite">
-                <img src="./assets/favicon_io/favicon-32x32.png">
+                <img id="logo-top" src="./assets/favicon_io/favicon-32x32.png">
             </div>
             <div class="icon-top">
                 <i class="bi bi-bluesky"></i>
@@ -41,23 +41,23 @@
     </header>
         <main>
             <div class="inital-phase">
-                 <i id="icon-main" class="bi bi-bluesky"></i>
                 <p id="part-one">Soluções Criativas &</p>
+                 <i id="icon-main" class="bi bi-bluesky"></i>
                 <p id="part-two">Desenvolvimento Front-end</p>
-                <button>
-                    <p>ver projetos</p>
-                    <i id="icon-arrow" class="bi bi-arrow-down-right"></i>
-                </button>
             </div>
             <section class="details-about-me">
                 <div class="descrition-about-me">
-                    <p>( Marina Santos - São Paulo, desenvolvedora full-stack e Estudante de ADS )</p>
+                    <p>Marina Santos - São Paulo, desenvolvedora full-stack e Estudante de ADS</p>
                 </div>
                 <div class="descrition-about-me-connect">
                      <a href="https://github.com/Marina0327" target="_blank"><i id="gitHub-top-description" class="bi bi-github"></i></a>
                      <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"><i id="linkedin-top-description" class="bi bi-linkedin"></i></a>
                      <!--see that after-->
                      <a href="mailto:marinasmorais07@gmail.com" target="_blank"><i id="email-top-description" class="bi bi-envelope-at-fill"></i></a>
+                     <button id="ver-projetos">
+                        <p>ver projetos</p>
+                     </button>
+                     <i id="icon-arrow" class="bi bi-arrow-down-right"></i>
                 </div>
             </section>
             <!-- section my things-->
@@ -67,6 +67,7 @@
                 encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe>
             </div>
+
             <section class="main-knowledge">
                 <div class="contet-knoledge">
                     <p>Conhecimento em Tecnologias : </p>
@@ -74,7 +75,28 @@
                     <i class="bi bi-filetype-css"></i>
                     <i class="bi bi-filetype-js"></i>
                 </div>
-            
+            </section>
+
+            <section class="main-projects">
+                <div class="projects">
+                    <h2>projetos</h2>
+                </div>
+            </section>
+            <section class="main-about-me">
+                <div class="about-me">
+                    <h2>sobre mim</h2>
+                    <p id="text-about-me">Oi! Eu sou a Marina Santos — uma desenvolvedora em formação que adora criar,
+                        aprender e transformar ideias em algo real. Estudo ADS e já tenho uma boa base em HTML, CSS,
+                        JavaScript e C#. Sou curiosa, esforçada e estou sempre buscando melhorar um pouco todos os dias.
+                        Gosto de resolver problemas, testar coisas novas e deixar tudo mais bonito, organizado e funcional.
+                        Procuro minha primeira oportunidade para entrar no mercado e crescer junto com uma equipe que valorize aprendizado,
+                        criatividade e boa comunicação.
+                    </p>   
+                    <p id="languages">Idiomas: Inglês: Intermediario | Espanhol: Básico | Russo: Básico </p>
+                    <p id="conecte-se comigo"> conecte-se comigo</p>
+                    <i class="bi bi-arrow-down-right"></i>
+                    <p id="curriculum">Currículo</p>
+                </div>
             </section>
         </main>
             <footer>
