add  new images of languages

--- a/index.html
+++ b/index.html
@@ -56,24 +56,23 @@
                      <a href="mailto: marinasmorais07@gmail.com" target="_blank"><i id="email-top-description" class="bi bi-envelope-at-fill"></i></a>
                      <button id="ver-projetos">
                         <p>ver projetos</p>
+                        <i id="icon-arrow" class="bi bi-arrow-down-right"></i>
                      </button>
-                     <i id="icon-arrow" class="bi bi-arrow-down-right"></i>
                 </div>
             </section>
-            <!-- section my things-->
             <div class="video-content">
                 <iframe width="760" height="470" src="https://www.youtube.com/embed/_K-tFITkPJ4?si=i3C1MMK1Kyd1wF_t"
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
                 encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe>
             </div>
-
             <section class="main-knowledge">
                 <div class="contet-knoledge">
                     <p>Conhecimento em Tecnologias : </p>
-                    <i class="bi bi-filetype-html"></i>
-                    <i class="bi bi-filetype-css"></i>
-                    <i class="bi bi-filetype-js"></i>
+                 <img id="html-img" src="./assets/images/html5-image.png" alt="image of language html">
+                 <img src="./assets/images/css-image.jpg" alt="image of language Css">
+                 <img src="./assets/images/javaScript-image.png.webp" alt=" image of language javaScript">
+                 <img src="./assets/images/" alt="image of language .net image">
                 </div>
             </section>
 
