--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                  <img id="html-img" src="./assets/images/html5-image.png" alt="image of language html">
                  <img src="./assets/images/css-image.jpg" alt="image of language Css">
                  <img src="./assets/images/javaScript-image.png.webp" alt=" image of language javaScript">
-                 <img src="./assets/images/" alt="image of language .net image">
+                 <img src="" alt="image of language .net image">
                 </div>
             </section>
 
