atualizations of images

--- a/index.html
+++ b/index.html
@@ -66,16 +66,15 @@
                 encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe>
             </div>
+
+
             <section class="main-knowledge">
-                <div class="contet-knoledge">
+                <div class="contet-knowledge">
                     <p>Conhecimento em Tecnologias : </p>
-                 <img id="html-img" src="./assets/images/html5-image.png" alt="image of language html">
-                 <img src="./assets/images/css-image.jpg" alt="image of language Css">
-                 <img src="./assets/images/javaScript-image.png.webp" alt=" image of language javaScript">
-                 <img src="" alt="image of language .net image">
+                 <img id="html-javaScript-img" src="./assets/images/html-javaScript-image.png" alt="image of language html">
+                 <img id="css-img" src="./assets/images/css-image.webp" alt="image of language Css">
                 </div>
             </section>
-
             <section class="main-projects">
                 <div class="projects">
                     <h2>projetos</h2>
