finish the knowledge

--- a/index.html
+++ b/index.html
@@ -69,17 +69,21 @@
 
 
             <section class="main-knowledge">
-                <div class="contet-knowledge">
-                    <p>Conhecimento em Tecnologias : </p>
-                 <img id="html-javaScript-img" src="./assets/images/html-javaScript-image.png" alt="image of language html">
-                 <img id="css-img" src="./assets/images/css-image.webp" alt="image of language Css">
+                <div class="content-knowledge">
+                    <p id="word-knowledge">Conhecimento em Tecnologias: </p>
                 </div>
+                <img id="knowledge-img" src="/assets/images/knowledge.png" alt="image of language html">
             </section>
+
+
             <section class="main-projects">
                 <div class="projects">
-                    <h2>projetos</h2>
+                    <h2>projetos pessoais</h2>
                 </div>
             </section>
+
+
+
             <section class="main-about-me">
                 <div class="about-me">
                     <h2>sobre mim</h2>
