--- a/index.html
+++ b/index.html
@@ -22,42 +22,33 @@
 </head>
 <body>
     <header>
-        <section class="top">
-            <div class="menu-top">
-                <ul class="ul-top">
-                    <li id="Home" href="#Home">Home</li>
-                    <li id="Projects" href="#Projects">Projects</li>
-                    <li id="About" href="#About">About</li>
-                    <li id="Contact" href="#Contact">Contact</li>
-                </ul>
+        <nav class="menu-top">
+            <ul class="ul-top">
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#Projects">Projects</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Contact">Contact</a></li>
+            </ul>
+        </nav>
+            <div class="icons-top">
+                <img id="favio-icon-top" src="./assets/favicon_io/favicon-16x16.png" alt="logo do topo página">
+                <i id="butterfly-icon-top" class="bi bi-bluesky"></i>
             </div>
-            <div class="logoSite">
-                <img id="logo-top" src="./assets/favicon_io/favicon-32x32.png">
-            </div>
-            <div class="icon-top">
-                <i class="bi bi-bluesky"></i>
-            </div>
-        </section>
     </header>
         <main>
-            <div class="inital-phase">
-                <p id="part-one">Soluções Criativas &</p>
-                 <i id="icon-main" class="bi bi-bluesky"></i>
-                <p id="part-two">Desenvolvimento Front-end</p>
+            <div class="inital-part">
+                <h1>Soluções Criativas & Desenvolvimento Front-end</h1>
+                <i id="icon-initial-part" class="bi bi-bluesky"></i>
             </div>
             <section class="details-about-me">
-                <div class="descrition-about-me">
-                    <p>Marina Santos - São Paulo, desenvolvedora full-stack e Estudante de ADS</p>
-                </div>
-                <div class="descrition-about-me-connect">
-                     <a href="https://github.com/Marina0327" target="_blank"><i id="gitHub-top-description" class="bi bi-github"></i></a>
-                     <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"><i id="linkedin-top-description" class="bi bi-linkedin"></i></a>
+                <h2>Sobre mim</h2>
+                <p class="description"> Marina Santos - São Paulo, desenvolvedora full-stack e Estudante de ADS</p>
+                <div class="Contatct-links">
+                     <a id="gitHub-top-description"   href="https://github.com/Marina0327" target="_blank"><i class="bi bi-github"></i></a>
+                     <a id="linkedin-top-description" href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"><i class="bi bi-linkedin"></i></a>
                      <!--see that after-->
-                     <a href="mailto: marinasmorais07@gmail.com" target="_blank"><i id="email-top-description" class="bi bi-envelope-at-fill"></i></a>
-                     <button id="ver-projetos">
-                        <p>ver projetos</p>
-                        <i id="icon-arrow" class="bi bi-arrow-down-right"></i>
-                     </button>
+                     <a  id="email-top-description"   href="mailto: marinasmorais07@gmail.com" target="_blank"><i class="bi bi-envelope-at-fill"></i></a>
+                     <button id="ver-projetos">ver projetos<i id="icon-arrow" class="bi bi-arrow-down-right"></i></button>
                 </div>
             </section>
             <div class="video-content">
@@ -66,24 +57,27 @@
                 encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen></iframe>
             </div>
-
-
-            <section class="main-knowledge">
-                <div class="content-knowledge">
-                    <p id="word-knowledge">Conhecimento em Tecnologias: </p>
-                </div>
+            <section class="knowledge">
+                <h2>meus conhecimentos: </h2>
                 <img id="knowledge-img" src="/assets/images/knowledge.png" alt="image of language html">
             </section>
-
-
-            <section class="main-projects">
-                <div class="projects">
-                    <h2>projetos pessoais</h2>
-                </div>
+            <section class="projects">
+              
+                <h2>projetos</h2>
+                <details>
+                  <summary>clique aqui para ver meus projetos</summary>
+                    <i  id="laptop" class="bi bi-laptop"></i>
+                    <div class="piano-project">
+                        <img id="piano" src="./assets/images/piano.jpeg" alt="projeto pessoal piano">
+                        <p>Este projeto é uma simulação interativa de um Teclado de Piano Virtual desenvolvida integralmente com tecnologias 
+                        front-end. O objetivo principal foi criar uma experiência musical responsiva e imediata, replicando a interação de um
+                        instrumento real.</p>
+                    </div>
+                </details>
             </section>
 
 
-
+    <!--
             <section class="main-about-me">
                 <div class="about-me">
                     <h2>sobre mim</h2>
@@ -104,6 +98,7 @@
             <footer>
                 <p>@2025 Made by Developer Marina Santos</p>
             </footer>
+            -->
         <script defer src="./assets/scripts/script.js"></script>
 </body>
 </html>
