updates css piano´s part

--- a/index.html
+++ b/index.html
@@ -59,14 +59,20 @@
             <h2>meus conhecimentos: </h2>
             <img id="knowledge-img" src="/assets/images/knowledge.png" alt="image of language html">
         </section>
+
         <section class="projects">
-          
             <h2>projetos</h2>
+            <i  id="laptop" class="bi bi-laptop"></i>
             <details>
               <summary>clique aqui para ver meus projetos</summary>
-                <i  id="laptop" class="bi bi-laptop"></i>
                 <div class="piano-project">
                     <img id="piano" src="./assets/images/piano.jpeg" alt="projeto pessoal piano">
+                    <p>Este projeto é uma simulação interativa de um Teclado de Piano Virtual desenvolvida integralmente com tecnologias 
+                    front-end. O objetivo principal foi criar uma experiência musical responsiva e imediata, replicando a interação de um
+                    instrumento real.</p>
+                </div>
+                 <div class="memory-game">
+                    <img id="memory" src="./assets/images/piano.jpeg" alt="projeto pessoal piano">
                     <p>Este projeto é uma simulação interativa de um Teclado de Piano Virtual desenvolvida integralmente com tecnologias 
                     front-end. O objetivo principal foi criar uma experiência musical responsiva e imediata, replicando a interação de um
                     instrumento real.</p>
