finishing "about me"

--- a/index.html
+++ b/index.html
@@ -64,18 +64,26 @@
             <h2>projetos</h2>
             <i  id="laptop" class="bi bi-laptop"></i>
             <details>
-              <summary>clique aqui para ver meus projetos</summary>
+              <summary>clique aqui para ver meus projetos<span id="observation">(*OBS: Projetos feitos pelo bootcamp da DIO)</span></summary>
                 <div class="piano-project">
                     <img id="piano" src="./assets/images/piano.jpeg" alt="projeto pessoal piano">
                     <p>Este projeto é uma simulação interativa de um Teclado de Piano Virtual desenvolvida integralmente com tecnologias 
                     front-end. O objetivo principal foi criar uma experiência musical responsiva e imediata, replicando a interação de um
                     instrumento real.</p>
                 </div>
-                 <div class="memory-game">
-                    <img id="memory" src="./assets/images/piano.jpeg" alt="projeto pessoal piano">
-                    <p>Este projeto é uma simulação interativa de um Teclado de Piano Virtual desenvolvida integralmente com tecnologias 
-                    front-end. O objetivo principal foi criar uma experiência musical responsiva e imediata, replicando a interação de um
-                    instrumento real.</p>
+                 <div class="memory-project">
+                    <img id="memory" src="./assets/images/memory-game.png" alt="projeto pessoal piano">
+                    <p>Aplicação interativa criada com HTML, CSS e JavaScript em que o jogador deve virar cartas
+                     para encontrar pares correspondentes. O jogo utiliza manipulação do DOM, lógica de comparação de 
+                     cartas e animações de virada para proporcionar uma experiência envolvente e divertida.</p>
+                </div>
+                <div class="pokedex-project">
+                    <img id="memory" src="./assets/images/pokedex-page.jpeg" alt="projeto pessoal piano">
+                    <p>Projeto desenvolvido com HTML, CSS e JavaScript, que consome dados da PokéAPI para exibir
+                    informações de diferentes Pokémon. A aplicação mostra nome, imagem e detalhes básicos, permitindo
+                    ao usuário explorar os personagens de forma simples e dinâmica.
+                    O objetivo do projeto foi treinar manipulação do DOM, integração com API externa, estruturação semântica 
+                    e estilização responsiva.</p>
                 </div>
             </details>
         </section>
@@ -92,16 +100,15 @@
                         criatividade e boa comunicação.
                     </p>   
                     <p id="languages">Idiomas: Inglês: Intermediario | Espanhol: Básico | Russo: Básico </p>
-                    <p id="conecte-se-comigo"> conecte-se comigo</p>
-                    <p id="curriculum">Currículo</p>
-                    <i class="bi bi-arrow-down-right"></i>
+                    <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"  id="conecte-se-comigo"> conecte-se comigo:</a>
+                    <span id="curriculum"> Currículo  
+                        <i class="bi bi-arrow-down-right"></i>
+                    </span>
             </section>
-            <!--
         </main>
             <footer>
-                <p>@2025 Made by Developer Marina Santos</p>
+                <p>@2025 Made by Developer Marina Santos with Tech Elidiana Andrade</p>
             </footer>
-            -->
     <script defer src="./assets/scripts/script.js"></script>
 </body>
 </html>
