updating about me

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     
             <section class="main-about-me">
                     <h2>sobre mim</h2>
+                    <img src="./assets/images/foto-MarinaSantosjpeg.jpeg">
                     <p id="text-about-me">Eu sou a Marina Santos — uma desenvolvedora em formação que adora criar,
                         aprender e transformar ideias em algo real. Estudo ADS e já tenho uma boa base em HTML, CSS,
                         JavaScript e C#. Sou curiosa, esforçada e estou sempre buscando melhorar um pouco todos os dias.
