remove unused styles for main about me section

--- a/index.html
+++ b/index.html
@@ -70,12 +70,16 @@
                     <p>Este projeto é uma simulação interativa de um Teclado de Piano Virtual desenvolvida integralmente com tecnologias 
                     front-end. O objetivo principal foi criar uma experiência musical responsiva e imediata, replicando a interação de um
                     instrumento real.</p>
+                    <a href="https://github.com/Marina0327/Vritual-Piano" target="_blank"><h3>repositório</h3></a>
+
                 </div>
                  <div class="memory-project">
                     <img id="memory" src="./assets/images/memory-game.png" alt="projeto pessoal piano">
                     <p>Aplicação interativa criada com HTML, CSS e JavaScript em que o jogador deve virar cartas
                      para encontrar pares correspondentes. O jogo utiliza manipulação do DOM, lógica de comparação de 
                      cartas e animações de virada para proporcionar uma experiência envolvente e divertida.</p>
+                    <a href="https://github.com/Marina0327/memoryGame" target="_blank"><h3>repositório</h3></a>
+
                 </div>
                 <div class="pokedex-project">
                     <img id="memory" src="./assets/images/pokedex-page.jpeg" alt="projeto pessoal piano">
@@ -84,6 +88,7 @@
                     ao usuário explorar os personagens de forma simples e dinâmica.
                     O objetivo do projeto foi treinar manipulação do DOM, integração com API externa, estruturação semântica 
                     e estilização responsiva.</p>
+                    <a href="https://github.com/Marina0327/PokeApi" target="_blank"><h3>repositório</h3></a>
                 </div>
             </details>
         </section>
@@ -91,7 +96,7 @@
 
     
             <section class="main-about-me">
-                    <h2>sobre mim</h2>
+                    <h2 class="sobre-mim">sobre mim</h2>    
                     <img src="./assets/images/foto-MarinaSantosjpeg.jpeg">
                     <p id="text-about-me">Eu sou a Marina Santos — uma desenvolvedora em formação que adora criar,
                         aprender e transformar ideias em algo real. Estudo ADS e já tenho uma boa base em HTML, CSS,
