finishing css of "about me"

--- a/index.html
+++ b/index.html
@@ -97,19 +97,30 @@
     
             <section class="main-about-me">
                     <h2 class="sobre-mim">sobre mim</h2>    
-                    <img src="./assets/images/foto-MarinaSantosjpeg.jpeg">
-                    <p id="text-about-me">Eu sou a Marina Santos — uma desenvolvedora em formação que adora criar,
-                        aprender e transformar ideias em algo real. Estudo ADS e já tenho uma boa base em HTML, CSS,
-                        JavaScript e C#. Sou curiosa, esforçada e estou sempre buscando melhorar um pouco todos os dias.
-                        Gosto de resolver problemas, testar coisas novas e deixar tudo mais bonito, organizado e funcional.
-                        Procuro minha primeira oportunidade para entrar no mercado e crescer junto com uma equipe que valorize aprendizado,
-                        criatividade e boa comunicação.
-                    </p>   
-                    <p id="languages">Idiomas: Inglês: Intermediario | Espanhol: Básico | Russo: Básico </p>
-                    <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"  id="conecte-se-comigo"> conecte-se comigo:</a>
+                    <div class="about-me-informations">
+                     <img src="./assets/images/foto-MarinaSantosjpeg.jpeg">
+                        <p id="text-about-me">
+                            Marina Santos, Desenvolvedora em Formação (ADS).
+                             Minha paixão é transformar ideias em soluções funcionais, utilizando uma base técnica em HTML, CSS, JavaScript e C#.
+                            Meu crescimento é movido pelo desafio, sei que é tentando, errando e acertando que alcançamos a excelência no desenvolvimento,
+                            com foco em organização e resolução de problemas;
+                             Busco minha primeira oportunidade para contribuir e crescer em uma equipe que valorize o aprendizado contínuo.
+                        </p>   
+                    </div>
+
+                    <p id="languages"> <span>Idiomas</span> : Inglês: Intermediario | Espanhol: Básico | Russo: Básico </p>
+                    <a href="https://www.linkedin.com/in/marina-santos-28a19932a/" target="_blank"  id="conecte-se-comigo"> conecte-se comigo</a>
                     <span id="curriculum"> Currículo  
                         <i class="bi bi-arrow-down-right"></i>
                     </span>
+            </section>
+            <section class="formation">
+                <h2>Formação Acadêmica</h2>
+                <img src="https://media.licdn.com/dms/image/v2/D4D0BAQENQUXvgIvu5A/company-logo_200_200/company-logo_200_200/0/1733140845896/brazcubasoficial_logo?e=1765411200&v=beta&t=SKikoc_pSpj6oA2qdLTiQvU_2dSjbmN9_bXGXG5IEP4">
+                <p>Centro Universitário Braz Cubas
+                Análise e Desenvolvimento de Sistemas Análise e Desenvolvimento de Sistemas 
+                fev de 2025 - dez de 2026fev de 2025 - dez de 2026
+                </p>
             </section>
         </main>
             <footer>
