--- a/index.html
+++ b/index.html
@@ -122,6 +122,55 @@
                 fev de 2025 - dez de 2026fev de 2025 - dez de 2026
                 </p>
             </section>
+            <section class="curses">
+                <h2>Cursos</h2>
+                <details>
+                 <summary>clique aqui para ver meus cursos e certificações</summary>
+                   <div class="front-end">
+                     <img src="https://media.licdn.com/dms/image/v2/D4D0BAQEK8tVlmrpwAg/company-logo_100_100/B4DZow70hVJAAQ-/0/1761757580130/dio_makethechange_logo?e=1765411200&v=beta&t=jrRJDUpGpbikJdrQqyC2uEzBMNca1Abm5IU06cIHPwQ">       
+                     <h3>Ri-Happy-Front-End do zero</h3>
+                     <p>Verificação emitida em nov de 2025Verificação emitida em nov de 2025</p>
+                      <span><p>ver credencial</p></span>
+                    </div>
+                    <div class="Udmey">
+                        <img src="https://media.licdn.com/dms/image/v2/D560BAQEf_NHzN2yVQg/company-logo_100_100/company-logo_100_100/0/1723593046388/udemy_logo?e=1765411200&v=beta&t=Xhs0w_t0WsGMQ8eIt4x6fTSiI8EiWgzzduzgO03FOHI">       
+                        <h3>C# COMPLETO Programação Orientada a Objetos + Projetos</h3>
+                        <p>Verificação emitida em out de 2025Verificação emitida em out de 2025</p>
+                      <span><p>ver credencial</p></span>
+                    </div>
+                    <div class="alura">
+                        <img src="https://media.licdn.com/dms/image/v2/D4D0BAQEZkMsv5FwbDA/company-logo_100_100/company-logo_100_100/0/1710187635900/aluracursos_logo?e=1765411200&v=beta&t=4J20SF-Yiq-r5iR-PMPJZtb-7M4BG4jv43qSLH_yO-s">       
+                        <h3>C#: consumindo API, gravando arquivos e utilizando o LINQ</h3>
+                        <p>Verificação emitida em nov de 2024Verificação emitida em nov de 2024</p>
+                      <span><p>ver credencial</p></span>
+                    </div>
+                    <div class="alura">
+                        <img src="https://media.licdn.com/dms/image/v2/D4D0BAQEZkMsv5FwbDA/company-logo_100_100/company-logo_100_100/0/1710187635900/aluracursos_logo?e=1765411200&v=beta&t=4J20SF-Yiq-r5iR-PMPJZtb-7M4BG4jv43qSLH_yO-s">       
+                        <h3>C#: dominando Orientação a Objetos</h3>
+                        <p>Verificação emitida em set de 2024Verificação emitida em set de 2024</p>
+                      <span><p>ver credencial</p></span>
+                    </div>
+                    <div class="alura">
+                        <img src="https://media.licdn.com/dms/image/v2/D4D0BAQEZkMsv5FwbDA/company-logo_100_100/company-logo_100_100/0/1710187635900/aluracursos_logo?e=1765411200&v=beta&t=4J20SF-Yiq-r5iR-PMPJZtb-7M4BG4jv43qSLH_yO-s">       
+                        <h3>C#: aplicando a Orientação a Objetos</h3>
+                        <p>Verificação emitida em jun de 2024Verificação emitida em jun de 2024</p>
+                      <span><p>ver credencial</p></span>
+                    </div>
+                    <div class="alura">
+                        <img src="https://media.licdn.com/dms/image/v2/D4D0BAQEZkMsv5FwbDA/company-logo_100_100/company-logo_100_100/0/1710187635900/aluracursos_logo?e=1765411200&v=beta&t=4J20SF-Yiq-r5iR-PMPJZtb-7M4BG4jv43qSLH_yO-s">       
+                        <h3>C#: Criando sua primeira aplicação</h3>
+                        <p>Verificação emitida em mai de 2024Verificação emitida em mai de 2024</p>
+                      <span><p>ver credencial</p></span>
+                    </div>
+                    <div class="gft">
+                        <img src="https://media.licdn.com/dms/image/v2/D4E0BAQHo8b2c2pSzMw/company-logo_100_100/B4EZmE9mMwIMAU-/0/1758872364214/gft_technologies_brasil_logo?e=1765411200&v=beta&t=BT_DDCZkpz2yVJIJ9D8_OBr_xIYXQf-wp2c1R9LbwHc">       
+                        <h3>GFT Start #7 .NET</h3>
+                        <p>Emitido em jul de 2025 · Expira em ago de 2025</p>
+                      <span><p>ver credencial</p></span>
+                    </div>            
+                </details>
+         
+            </section>
         </main>
             <footer>
                 <p>@2025 Made by Developer Marina Santos with Tech Elidiana Andrade</p>
