--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <section class="knowledge">
             <h2>meus conhecimentos: </h2>
-            <img id="knowledge-img" src="/assets/images/knowledge.png" alt="image of language html">
+            <img id="knowledge-img" src="./assets/images/knowledge.png" alt="image of language html">
         </section>
 
         <section id="projects" class="projects">
